Terraform-Project/modules/security_group/jump_security_group/main.tf
variable "vpc_id" {}

resource "aws_security_group" "jump_security_group" {
  name        = "jump_security_group"
  description = "Allow inbound traffic on port 22 and 80"
  vpc_id      = var.vpc_id

  //SSH Port
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  //Port for Grafana
  ingress {
    from_port = 3000
    to_port = 3000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  //Port for Jenkins
  ingress {
    from_port = 3000
    to_port = 3000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  //Port for Promotheus
  ingress {
    from_port = 9090
    to_port = 9090
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
  
}

output "jump_security_group_id" {
  value = aws_security_group.jump_security_group.id
}
